[package]
name = "distatus"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.9.0-alpha.1"
dotenv = "0.15.0"
